- New: EMails links are show with function dol_print_email
- New: Add graph report on number of entities in product statistics page.
- New: Can delete a supplier order whatever is its status.
- New: No limit on free text on PDF generated documents.
- New: Can force login value when creating a user from a member.
- New: Can clone a commercial proposal.
- New: Major enhancement of project module.
- Fix: Failed to go on the future view of bank transaction if there is no 
  future bank transaction already wrote.  
- Fix: Bad ref in supplier list.
- Fix: Bad link in product statistics for supplier referers.
- Fix: Usage of reset of cursor in personalized numbering modules for a particular
  month (@ option) was broken.
- Can add contacts to a supplier invoice.
- Fix: When an invoice is changed back to status draft, warehouse is increased 
  back.
- Fix: Category of a bank transaction was not saved.
- Fix: Clicktodial plugin works correctly now
- Fix: Multiprices features works correctly.
- Fix: Project module and task creation.

For translators:
- Added ca_ES language files

For developers:
- Removed som deprecated files.
- Renamed all function dolibarr_xxx into dol_xxx to have same prefix everywhere.
- Rewrite clone feature for supplier invoice to work like other clone features.


***** Changelog for 2.5 compared to 2.4 *****

For users:
- Sessions timeout can be configured to overwrite PHP setup.
- Can filter on date in services list.
- Support bookmark add of product cards.
- Enhancement in stock management (Automatic increase/decrease
  from order or invoice is possible).
- New filter options in prospect lists (category and level).
- New view in ECM module.
- Look enhancements for graphics (add transparency).
- Added statistics report for supplier invoices.
- Added average amount in invoices statistics reports.
- Can move a contract line to another contract of same third party.
- Add an export definition to export interventions.